--- a/css/styles.css
+++ b/css/styles.css
@@ -1,35 +1,142 @@
+:root {
+  --primary-text-color: rgba(117, 117, 117, 1);
+  --title-text-color: rgba(33, 33, 33, 1);
+  --accent-color: rgba(33, 150, 243, 1);
+  --primary-white-color: #ffffff;
+}
 body {
-  background-color: #ffffff;
-  color: #212121;
-  font: Roboto;
-  padding-left: 215px;
-}
-section {
-}
-ul {
-  list-style: none;
-}
-.site-nav li {
-  display: inline;
-  float: left;
-  padding-left: 93px;
-  padding-top: 32px;
-}
-.site-adress li {
-  display: inline;
-}
-.link {
-  text-decoration: none;
-  color: #212121;
-}
-.site-nav .link:hover {
-  color: #2196f3;
-}
-.site-adress .link:hover {
-  color: #2196f3;
+  background-color: var(--primary-white-color);
+  color: var(--primary-text-color);
+  font-family: Roboto, sans-serif;
+  letter-spacing: 0.03em;
 }
 .logo {
+  color: var(--title-text-color);
+  font-family: Raleway, cursive;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
   text-decoration: none;
-  float: left;
-  padding-top: 24px;
+}
+.accent {
+  color: var(--accent-color);
+}
+
+.site-nav {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+}
+.site-link {
+  color: var(--title-text-color);
+  text-decoration: none;
+}
+.site-link:hover,
+.site-link:focus {
+  color: var(--accent-color);
+}
+.contact-link {
+  color: var(--primary-text-color);
+  text-decoration: none;
+}
+.contact-link:hover,
+.contact-link:focus {
+  color: var(--accent-color);
+}
+.list {
+  list-style: none;
+}
+.hero {
+  background-color: #2f303a;
+}
+.hero h1 {
+  color: var(--primary-white-color);
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+}
+.button {
+  color: var(--primary-white-color);
+  background-color: var(--accent-color);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.6;
+  cursor: pointer;
+}
+.button.primary {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+}
+
+.button.secondary {
+  color: var(--title-text-color);
+  background-color: #f5f4fa;
+}
+.qualities h3 {
+  color: var(--title-text-color);
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+}
+.qualities p {
+  font-size: 14px;
+  line-height: 1.7;
+}
+.section h2 {
+  color: var(--title-text-color);
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+}
+.team {
+  background-color: #f5f4fa;
+}
+.team h3 {
+  color: var(--title-text-color);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.18;
+}
+.team p {
+  font-size: 16px;
+  line-height: 1.19;
+}
+footer {
+  background-color: #2f303a;
+}
+.adress p {
+  color: var(--primary-white-color);
+  font-style: normal;
+  font-size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+}
+.studio {
+  color: var(--primary-white-color);
+}
+.link-footer {
+  color: var(--primary-text-color);
+  font-style: normal;
+  font-size: 14px;
+  line-height: 1, 71;
+  text-decoration: none;
+}
+.project h3 {
+  color: var(--title-text-color);
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+}
+.project p {
+  font-size: 16px;
+  line-height: 1.88;
 }
